--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#6A4029" />
     <meta
       name="description"
-      content="jokopi is a store that sells some good meals, and especially coffee. We provide high quality beans"
+      content="Abata Coffe is a store that sells some good meals, and especially coffee. We provide high quality beans"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>jokopi</title>
+    <title>Abata Coffe</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
